--- a/templates/head.html
+++ b/templates/head.html
@@ -11,5 +11,5 @@
     <link rel="stylesheet" href="{% static 'uikit/uikit.css' %}"/>
     <link rel="stylesheet" href="{% static 'css/app.css' %}"/>
 
-    <title>JobSearch</title>
+    <title>Поиск работы</title>
 </head>
