--- a/templates/home.html
+++ b/templates/home.html
@@ -7,10 +7,10 @@
         <div class="card">
 
             <div class="auth__alternative">
-                <a href="{% url 'users:employer-register'%}"><input class="btn btn--sub btn--lg" type="submit" value="I am a employer"/></a>
-                <a href="{% url 'account_signup' %}"><input class="btn btn--sub btn--lg" type="submit" value="I am a employee"/></a>
+                <a href="{% url 'users:employer-register'%}"><input class="btn btn--sub btn--lg" type="submit" value="Я работодатель"/></a>
+                <a href="{% url 'account_signup' %}"><input class="btn btn--sub btn--lg" type="submit" value="Я сотрудник"/></a>
             </div>
 
         </div>
     </div>
-{% endblock %} %}
+{% endblock %}
