--- a/templates/jobs/job-delete.html
+++ b/templates/jobs/job-delete.html
@@ -11,8 +11,8 @@
                         <i class="im im-angle-left"></i>
                     </a>
                     {% csrf_token %}
-                    <p>Are your sure you want to delete this <strong>"{{ job.title }}"</strong>?</p>
-                    <input class="btn btn--sub btn--lg  my-md" type="submit" value="Delete"/>
+                    <p>Вы уверены, что хотите удалить это? <strong>"{{ job.title }}"</strong>?</p>
+                    <input class="btn btn--sub btn--lg  my-md" type="submit" value="Удалить"/>
                 </form>
             </div>
         </div>
