--- a/templates/jobs/job_applicant.html
+++ b/templates/jobs/job_applicant.html
@@ -3,7 +3,7 @@
 {% block content %}
     <main class="inbox my-xl">
         <div class="content-box">
-            <h3 class="inbox__title">My Applications</h3>
+            <h3 class="inbox__title">Мои приложения</h3>
 
             <ul class="messages">
                 {% for app in applicant %}
