--- a/templates/users/inbox.html
+++ b/templates/users/inbox.html
@@ -3,7 +3,7 @@
 {% block content %}
     <main class="inbox my-xl">
         <div class="content-box">
-            <h3 class="inbox__title">New Messages(<span>{{ unreadCount }}</span>)</h3>
+            <h3 class="inbox__title">Новые сообщения(<span>{{ unreadCount }}</span>)</h3>
             <ul class="messages">
                 {% for message in messageRequests %}
                     {% if message.is_read == False %}
