--- a/templates/account/employerSignup.html
+++ b/templates/account/employerSignup.html
@@ -10,8 +10,8 @@
                 <a href="{% url 'jobs:jobs' %}">
                     <img src="{% static 'img/icon.svg' %}" alt="icon"/>
                 </a>
-                <h3>Register an Account</h3>
-                <p>Create a new employer account</p>
+                <h3>Зарегистрировать аккаунт</h3>
+                <p>Создать новую учетную запись работодателя</p>
             </div>
 
             <form method="post" action="{% url 'users:employer-register' %}" class="form auth__form">
@@ -31,11 +31,11 @@
                 {% endif %}
 
                 <div class="auth__actions">
-                    <input class="btn btn--sub btn--lg" type="submit" value="Sign Up"/>
+                    <input class="btn btn--sub btn--lg" type="submit" value="Зарегистрироваться"/>
                 </div>
             </form>
             <div class="auth__alternative">
-                <p>Already have an Account? <a href="{% url 'account_login' %}">Log In</a></p>
+                <p>У вас уже есть учетная запись? <a href="{% url 'account_login' %}">Войти</a></p>
             </div>
         </div>
     </div>
