--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -10,7 +10,7 @@
                 <a href="{% url 'jobs:jobs' %}">
                     <img src="{% static 'img/icon.svg' %}" alt="icon"/>
                 </a>
-                <h3>Parolamı Değiştir</h3>
+                <h3>Изменить мой пароль</h3>
             </div>
 
             <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
@@ -32,8 +32,8 @@
                     <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
                 {% endif %}
                 <div class="auth__actions">
-                    <input class="btn btn--sub btn--lg" type="submit" value="Parolamı Değiştir"/>
-                    <a href="{% url 'account_reset_password' %}">Parolanızı mı unuttunuz?</a>
+                    <input class="btn btn--sub btn--lg" type="submit" value="Изменить мой пароль"/>
+                    <a href="{% url 'account_reset_password' %}">Забыли пароль?</a>
                 </div>
             </form>
         </div>
