--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -31,16 +31,15 @@
 <main class="formPage my-xl">
     <div class="content-box">
         <div class="formWrapper">
-            <h3>Password reset</h3>
+            <h3>Сброс пароля</h3>
 
-            <p>Forgotten your password? Enter your email address below, and we’ll email instructions for setting a new
-                one.</p>
+            <p>Забыли пароль? Введите свой адрес электронной почты ниже, и мы вышлем вам инструкции по настройке нового адреса.</p>
 
             <br>
             <form action="{% url 'account_reset_password' %}" class="form" method="POST">
                 {% csrf_token %}
                 {{form.as_p}}
-                <input class="btn btn--sub btn--lg  my-md" type="submit" value="Submit" />
+                <input class="btn btn--sub btn--lg  my-md" type="submit" value="Подтвердить" />
             </form>
         </div>
     </div>
