--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -6,13 +6,11 @@
 <main class="formPage my-xl">
     <div class="content-box">
         <div class="formWrapper">
-            <h3>Password reset sent</h3>
+            <h3>Сброс пароля отправлен</h3>
 
-            <p>We’ve emailed you instructions for setting your password, if an account exists with the email you
-                entered. You should receive them shortly.</p>
+            <p>Мы отправили вам по электронной почте инструкции по установке пароля, если существует учетная запись с указанным вами адресом электронной почты. Вы должны получить их в ближайшее время.</p>
             <br>
-            <p>If you don’t receive an email, please make sure you’ve entered the address you registered with, and check
-                your spam folder.</p>
+            <p>Если вы не получили электронное письмо, убедитесь, что вы ввели адрес, под которым зарегистрировались, и проверьте папку со спамом.</p>
         </div>
     </div>
 </main>
