--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -30,16 +30,16 @@
 <main class="formPage my-xl">
     <div class="content-box">
         <div class="formWrapper">
-            <h3>Enter new password</h3>
+            <h3>Введите новый пароль</h3>
 
-            <p>Please enter your new password twice so we can verify you typed it in correctly.</p>
+            <p>Пожалуйста, введите новый пароль дважды, чтобы мы могли убедиться, что вы ввели его правильно.</p>
 
             <br>
 
             <form action="" class="form" method="POST">
                 {% csrf_token %}
                 {{form.as_p}}
-                <input class="btn btn--sub btn--lg  my-md" type="submit" value="Submit" />
+                <input class="btn btn--sub btn--lg  my-md" type="submit" value="Отправить" />
             </form>
         </div>
     </div>
