--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -7,11 +7,11 @@
 <main class="formPage my-xl">
     <div class="content-box">
         <div class="formWrapper">
-            <h3>Password reset complete</h3>
+            <h3>Сброс пароля завершен</h3>
 
-            <p>Your password has been set. You may go ahead and log in now.</p>
+            <p>Ваш пароль установлен. Вы можете войти в систему сейчас.</p>
             <br>
-            <a href="{% url 'account_login' %}">Login</a>
+            <a href="{% url 'account_login' %}">Войти</a>
         </div>
     </div>
 </main>
