--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -10,8 +10,8 @@
                 <a href="{% url 'jobs:jobs' %}">
                     <img src="{% static 'img/icon.svg' %}" alt="icon"/>
                 </a>
-                <h3>Register an Account</h3>
-                <p>Create a new account</p>
+                <h3>Зарегистрировать аккаунт</h3>
+                <p>Создать новую учетную запись</p>
             </div>
 
             <form method="post" action="{% url 'account_signup' %}" class="form auth__form">
@@ -35,7 +35,7 @@
                 </div>
             </form>
             <div class="auth__alternative">
-                <p>Already have an Account? <a href="{% url 'account_login' %}">Log In</a></p>
+                <p>У вас уже есть учетная запись? <a href="{% url 'account_login' %}">Войти</a></p>
             </div>
         </div>
     </div>
