--- a/templates/jobs/all_applicant.html
+++ b/templates/jobs/all_applicant.html
@@ -4,7 +4,7 @@
 {% block content %}
     <main class="inbox my-xl">
         <div class="content-box">
-            <h3 class="inbox__title">New Jobs Applications</h3>
+            <h3 class="inbox__title">Новые заявки на вакансию</h3>
             <ul class="messages">
                 {% for app in applicants %}
                     {% if app.is_read == False %}
