--- a/templates/jobs/job.html
+++ b/templates/jobs/job.html
@@ -7,13 +7,13 @@
         <div class="container">
             <div class="layout">
                 <div class="column column--1of3">
-                    <p class="singleProject__subtitle">Employer by <a href="{% url 'users:user-profile' job.owner.id %}"
+                    <p class="singleProject__subtitle">Работодатель <a href="{% url 'users:user-profile' job.owner.id %}"
                                                                       class="singleProject__developer">{{ job.owner.user.get_full_name }}</a>
                     </p>
 
                     <p class="singleProject__description">{{ job.created }}</p>
                 <br>
-                    <h3 class="singleProject__subtitle">Skills</h3>
+                    <h3 class="singleProject__subtitle">Навыки</h3>
                     <div class="singleProject__toolStack">
                         {% for tag in tags %}
                             <span class="tag tag--pill tag--sub tag--lg">
@@ -27,7 +27,7 @@
                 <div class="column column--2of3">
                     <img class="singleProject__preview" src="{{ job.imageURL }}" alt="portfolio thumbnail"/>
                     <h2 class="singleProject__title">{{ job.title }}</h2>
-                    <h3 class="singleProject__subtitle">About</h3>
+                    <h3 class="singleProject__subtitle">Дополнительная информация</h3>
                     <div class="singleProject__info">
                         {{ job.description }}
                     </div>
@@ -36,24 +36,23 @@
                         {% if user.is_authenticated and user.is_employee %}
                             {% is_job_already_applied job request.user.profile as is_applied %}
                             {% if is_applied %}
-                                <input class="btn btn--sub btn--lg" type="submit" value="Already Applied"/>
+                                <input class="btn btn--sub btn--lg" type="submit" value="Уже применено"/>
                             {% else %}
                                 <form class="form" action="{% url 'jobs:job-applications' job.id %}" method="POST">
                                     {% csrf_token %}
                                     <input type="hidden" name="job" value="{{ job.id }}">
-                                    <input class="btn btn--sub btn--lg" type="submit" value="Apply"/>
+                                    <input class="btn btn--sub btn--lg" type="submit" value="Применять"/>
                                 </form>
                             {% endif %}
                         {% elif user.is_authenticated and user.is_employer %}
                             {% if job.owner.id == user.profile.id %}
                                 <a class="btn btn--sub btn--lg" href="{% url 'jobs:job-update' job.id %}">
-                                    Edit</a>
+                                    Редактировать</a>
                                 <a class="btn btn--sub btn--lg" href="{% url 'jobs:job-delete' job.id %}">
-                                    Delete</a>
+                                    Удалить</a>
                             {% endif %}
                         {% else %}
-                            <a href="{% url 'account_login' %}?next={{ request.path }}">Please login to leave
-                                applied</a>
+                            <a href="{% url 'account_login' %}?next={{ request.path }}">Пожалуйста, войдите, чтобы оставить заявку</a>
                         {% endif %}
                     </div>
 
