--- a/templates/users/account.html
+++ b/templates/users/account.html
@@ -10,11 +10,11 @@
                         <div class="card__body dev">
                             <a class="tag tag--pill tag--main settings__btn" href="{% url 'users:edit-account' %}"><i
                                     class="im im-edit"></i>
-                                Edit</a>
+                                    Редактировать</a>
                             <img class="avatar avatar--xl dev__avatar" src="{{ profile.imageURL }}"/>
                             <h2 class="dev__name">{{ profile.user.username }}</h2>
                             <p class="dev__title">{{ profile.short_intro }}</p>
-                            <p class="dev__location">Based in {{ profile.location }}</p>
+                            <p class="dev__location">Базируется в {{ profile.location }}</p>
                             <ul class="dev__social">
 
                                 {% if profile.social_github %}
@@ -37,13 +37,13 @@
                                 {% endif %}
                                 {% if profile.social_website %}
                                     <li>
-                                        <a title="Personal Website" href="{{ profile.social_website }}" target="_blank"><i
+                                        <a title="Персональный сайт" href="{{ profile.social_website }}" target="_blank"><i
                                                 class="im im-globe"></i></a>
                                     </li>
                                 {% endif %}
                                 {% if profile.social_youtube %}
                                     <li>
-                                        <a title="Personal Website" href="{{ profile.social_youtube }}" target="_blank"><i
+                                        <a title="Персональный сайт" href="{{ profile.social_youtube }}" target="_blank"><i
                                                 class="im im-globe"></i></a>
                                     </li>
                                 {% endif %}
@@ -55,14 +55,14 @@
                 <div class="column column--2of3">
                     <div class="devInfo">
                         <div class="settings">
-                            <h3 class="devInfo__title">Informations</h3>
+                            <h3 class="devInfo__title">Информация</h3>
                             <a class="tag tag--pill tag--sub settings__btn tag--lg"
                                href="{% url 'account_change_password' %}"><i class="im im-lock"></i>
-                                Password Change </a>
+                               Изменение пароля </a>
                         </div>
                         <div class="layout">
                             <div class="column column--1of3">
-                                <h4 class="dev__title">Fullname</h4>
+                                <h4 class="dev__title">Имя</h4>
                             </div>
                             <div class="column column--2of3">
                                 <h4 class="dev__title">{{ user.get_full_name|title }}</h4>
@@ -70,7 +70,7 @@
                         </div>
                         <div class="layout">
                             <div class="column column--1of3">
-                                <h4 class="dev__title">Gender</h4>
+                                <h4 class="dev__title">Пол</h4>
                             </div>
                             <div class="column column--2of3">
                                 <p class="dev__title">{{ profile.get_gender_display }}</p>
@@ -78,7 +78,7 @@
                         </div>
                         <div class="layout">
                             <div class="column column--1of3">
-                                <h4 class="dev__title">Education</h4>
+                                <h4 class="dev__title">Образование</h4>
                             </div>
                             <div class="column column--2of3">
                                 <p class="dev__title">{{ profile.get_education_display }}</p>
@@ -86,14 +86,14 @@
                         </div>
                         <div class="layout">
                             <div class="column column--1of3">
-                                <h4 class="dev__title">Email</h4>
+                                <h4 class="dev__title">Электронная почта</h4>
                             </div>
                             <div class="column column--2of3">
                                 <p class="dev__title">{{ profile.user.email }}</p>
                             </div>
                         </div>
 
-                        <h3 class="devInfo__title">About</h3>
+                        <h3 class="devInfo__title">об</h3>
                         <p class="devInfo__about">
                             {{ profile.bio }}
                         </p>
@@ -101,10 +101,10 @@
 
                     {% if user.is_employee %}
                         <div class="settings">
-                            <h3 class="settings__title">Skills</h3>
+                            <h3 class="settings__title">Навыки</h3>
                             <a class="tag tag--pill tag--sub settings__btn tag--lg"
                                href="{% url 'users:create-skill' %}"><i class="im im-plus"></i>
-                                Add Skills </a>
+                               Добавить навыки </a>
                         </div>
 
                         <table class="settings__table">
@@ -120,11 +120,11 @@
                                         <a class="tag tag--pill tag--main settings__btn"
                                            href="{% url 'users:update-skill' skill.id %}"><i
                                                 class="im im-edit"></i>
-                                            Edit</a>
+                                                Редактировать</a>
                                         <a class="tag tag--pill tag--main settings__btn"
                                            href="{% url 'users:delete-skill' skill.id %}?next=/account"><i
                                                 class="im im-x-mark-circle-o"></i>
-                                            Delete</a>
+                                                Удалить</a>
                                     </td>
                                 </tr>
                             {% endfor %}
