--- a/templates/users/message_form.html
+++ b/templates/users/message_form.html
@@ -33,7 +33,7 @@
                     {{form.body}}
                 </div>
 
-                <input class="btn btn--sub btn--lg  my-md" type="submit" value="Submit" />
+                <input class="btn btn--sub btn--lg  my-md" type="submit" value="Подтвердить" />
             </form>
         </div>
     </div>
