--- a/templates/users/skill_form.html
+++ b/templates/users/skill_form.html
@@ -18,7 +18,7 @@
                         </div>
                     {% endfor %}
 
-                    <input class="btn btn--sub btn--lg  my-md" type="submit" value="Kaydet"/>
+                    <input class="btn btn--sub btn--lg  my-md" type="submit" value="Сохранять"/>
                 </form>
             </div>
         </div>
