fixed admin info bug

--- a/templates/users/account.html
+++ b/templates/users/account.html
@@ -93,7 +93,7 @@
                             </div>
                         </div>
 
-                        <h3 class="devInfo__title">об</h3>
+                        <h3 class="devInfo__title">Дополнительная информация</h3>
                         <p class="devInfo__about">
                             {{ profile.bio }}
                         </p>
