--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -7,7 +7,12 @@
                 <div class="column column--1of3">
                     <div class="card text-center">
                         <div class="card__body dev">
-                            <img class="avatar avatar--xl" src="{{ profile.imageURL }}"/>
+                            {% if profile.imageURL %}
+                                <img class="avatar avatar--xl" src="{{ profile.imageURL }}"/>
+                            {% else %}
+                                <img class="avatar avatar--xl" src="https://yelp.leoafricainstitute.org/wp-content/uploads/2022/05/default-profile-picture1.jpg"/>
+                            {% endif %}
+                            
                             <h2 class="dev__name">{{ profile.user.username }}</h2>
                             <p class="dev__title">{{ profile.short_intro }}</p>
                             <p class="dev__location">Based in {{ profile.location }}</p>
