--- a/templates/jobs/job.html
+++ b/templates/jobs/job.html
@@ -25,7 +25,7 @@
                 </div>
 
                 <div class="column column--2of3">
-                    <img class="singleProject__preview" src="{{ job.imageURL }}" alt="portfolio thumbnail"/>
+                    <img style="object-fit: contain;" class="singleProject__preview" src="{{ job.imageURL }}" alt="portfolio thumbnail"/>
                     <h2 class="singleProject__title">{{ job.title }}</h2>
                     <h3 class="singleProject__subtitle">Дополнительная информация</h3>
                     <div class="singleProject__info">
